--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.0.0",
     "axios": "^0.17.1",
     "js-joda": "^1.6.2",
     "material-ui": "^1.0.0-beta.31",
